--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.561.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "socket.io-client": "^4.6.1",
-    "axios": "^1.6.2"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.1",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "sass": "^1.69.5",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.8",
-    "sass": "^1.69.5"
+    "vite": "^5.0.8"
   }
 }
-
